archive/apps/gluetun/readarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readarr.joejad.com`)
      kind: Rule
      services:
        - name: gluetun
          port: 8787
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
